--- a/src/css/charts.scss
+++ b/src/css/charts.scss
@@ -1,10 +1,7 @@
 .chart-container {
 	position: relative; /* for absolutely positioned tooltip */
 
-	/* https://www.smashingmagazine.com/2015/11/using-system-ui-fonts-practical-guide/ */
-	font-family: -apple-system, BlinkMacSystemFont,
-		'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell',
-		'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+	font-family: Basier, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 
 	.axis, .chart-label {
 		fill: #555b51;
